test/files/neg/moduleClassReference.scala
object Test {
  def foo = Predef$.MODULE$ == Predef
}
